--- a/wp-content/themes/webx_contractor_single/sass/pages/_home-hero.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_home-hero.scss
@@ -1,4 +1,8 @@
 @media only screen {
+	.home-hero,
+	.home-hero-tint{
+		height: 100vh;
+	}
 	.home-hero-text-button{
 		text-decoration: none;
 		color: black;
