still working on the header

--- a/wp-content/themes/webx_contractor_single/sass/_vars.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_vars.scss
@@ -6,7 +6,7 @@ $nav_desktop: 1167px;
 $xlarge: 1440px;
 
 // colors
-$primary: #fcb315;
+$primary: #32A2AE;
 $footer-grey: #424343;
 $medium-grey: #383838;
 $light-grey: #dedddd;
