--- a/wp-content/themes/webx_contractor_single/sass/_fonts.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_fonts.scss
@@ -26,7 +26,7 @@
 	src: url('../../library/fonts/GothamHTF-UltraItalic.eot?#iefix') format('embedded-opentype'),
 		url('../../library/fonts/GothamHTF-UltraItalic.woff') format('woff'),
 		url('../../library/fonts/GothamHTF-UltraItalic.ttf') format('truetype');
-	font-weight: normal;
+	font-weight: 800;
 	font-style: italic;
 }
 
@@ -116,7 +116,7 @@
 	src: url('../../library/fonts/GothamHTF-Ultra.eot?#iefix') format('embedded-opentype'),
 		url('../../library/fonts/GothamHTF-Ultra.woff') format('woff'),
 		url('../../library/fonts/GothamHTF-Ultra.ttf') format('truetype');
-	font-weight: normal;
+	font-weight: 800;
 	font-style: normal;
 }
 
