--- a/wp-content/themes/webx_contractor_single/sass/pages/_home-hero.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_home-hero.scss
@@ -1,7 +1,7 @@
 @media only screen {
 	.home-hero,
 	.home-hero-tint{
-		height: 100vh;
+		height: 80vh;
 	}
 	.home-hero-text-button{
 		text-decoration: none;
@@ -22,11 +22,18 @@
 	}
 	.home-hero-text-button{
 		border-radius: 4px;
-		
+		font-weight: 400;
+		color: white;
 	}
 }
 
 @media only screen and (min-width: $large){
+	.home-hero-text{
+		max-width: 1440px;
+		text-align: left;
+		padding: 0 40px;
+		box-sizing: border-box;
+	}
 	.home-hero-text-button{
 		font-size: 2.4rem;
 		font-weight: normal;
