--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -1,4 +1,9 @@
 @media only screen {
+	.main{
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position-x: 50%;
+	}
 	.section{
 		text-align: center;
 		padding: 20px;
@@ -27,7 +32,7 @@
 	section:not(.home-hero):not(.coupons):not(.blog){
 		&.hero,
 		.hero-tint{
-			height: 60vh;
+			height: 25vh;
 		}
 		.hero-text{
 			left: 50%;
@@ -37,6 +42,11 @@
 	.hero-text-header{
 		font-size: 4.8rem;
 		color: white;
+		&.hero-text-header--nobg{
+			color: black;
+			border-bottom: 4px solid $primary;
+			padding-bottom: 7px;
+		}
 	}
 	.hero-text-subheader{
 		font-size: 1.8rem;
@@ -44,13 +54,16 @@
 		max-width: 720px;
 	}
 	.hero-tint{
-		background-color: rgba(0,0,0,0.35);
+		@include gradient-vertical(rgba(0,0,0,0.75), rgba(0,0,0,0));
 		position: absolute;
 		width: 100vw;
-		height: 80vh;
+		height: 100vh;
 		top: 0;
 		left: 0;
 		pointer-events: none;
+		&.hero-tint--nobg{
+			display: none;
+		}
 	}
 	.terms{
 		box-sizing: border-box;
@@ -84,6 +97,10 @@
 		bottom: 10%;
 	}
 	section:not(.home-hero):not(.coupons):not(.blog){
+		&.hero,
+		.hero-tint{
+			height: 25vh;
+		}
 		.hero-text{
 			bottom: auto;
 			top: 50%;
@@ -91,7 +108,7 @@
 		}
 	}
 	.hero-text-header{
-		font-size: 9.6rem;
+		font-size: 6.2rem;
 		max-width: 580px;
 	}
 }
