added new food pictures and put menu in a good place

--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -23,7 +23,8 @@
 		}
 		.gallery-galleries,
 		.company-employees-grid,
-		.services-services-grid{
+		.services-services-grid,
+		.menu-menu{
 			position: relative;
 			z-index: 2;
 		}
