--- a/wp-content/themes/webx_contractor_single/sass/pages/_menu.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_menu.scss
@@ -9,10 +9,12 @@
 		max-width: 720px;
 	}
 	.menu-menu-grid-category-header{
-		background-color: $primary;
-		padding: 5px 10px;
+		padding: 10px;
 		font-size: 2rem;
 		font-family: $body;
+		color: black;
+		font-weight: 500;
+		text-align: center;
 	}
 	.menu-menu-grid-category-description{
 		margin: 20px 0 40px 0;
@@ -30,20 +32,27 @@
 		}
 	}
 	.menu-menu-grid-category-grid-item-imagecontainer{
-		max-height: 205px;
-		overflow: hidden;
+		height: 205px;
 		position: relative;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 50% 50%;
 	}
 	.menu-menu-grid-category-grid-item-imagecontainer-image{
 		width: 100%;
 	}
+	.menu-menu-grid-category-grid-item-textcontainer{
+		text-align: center;
+	}
 	.menu-menu-grid-category-grid-item-textcontainer-header{
 		margin-top: 20px;
-		font-size: 2rem;
+		font-size: 1.8rem;
+		font-family: $body;
 	}
 	.menu-menu-grid-category-grid-item-textcontainer-description{
 		margin: 20px 0;
-		font-size: 1.6rem;
+		font-size: 1.4rem;
+		line-height: 21px;
 	}
 	.menu-menu-grid-category-grid-item-textcontainer-price{
 		margin-bottom: 20px;
@@ -58,14 +67,20 @@
 	.menu-menu-grid-category-listgrid-item{
 		margin: 20px 0;
 		font-size: 0;
+		&:not(:last-child){
+			border-bottom: 1px solid lightgrey;
+			padding-bottom: 15px;
+		}
 	}
 	.menu-menu-grid-category-listgrid-item-header,
 	.menu-menu-grid-category-listgrid-item-price{
 		display: inline-block;
-		vertical-align: bottom;
-		border-bottom: 2px solid black;
-		font-size: 1.8rem;
+		vertical-align: middle;
+		// border-bottom: 2px solid black;
+		font-size: 1.4rem;
+		font-weight: 500;
 		padding-bottom: 5px;
+		font-family: $body;
 	}
 	.menu-menu-grid-category-listgrid-item-header{
 		text-align: left;	
@@ -74,6 +89,12 @@
 	.menu-menu-grid-category-listgrid-item-price{
 		text-align: right;
 		width: 30%;
+		&:after{
+			content: '';
+			border-bottom: 1px solid black;
+			border-bottom-style: dashed;
+			width: 100%;
+		}
 	}
 	.menu-menu-grid-category-listgrid-item-description{
 		font-size: 1.6rem;
@@ -99,9 +120,6 @@
 		&:not(:last-child){
 			border-bottom: none;
 		}
-	}
-	.menu-menu-grid-category-grid-item-textcontainer{
-		text-align: left;
 	}
 	.menu-menu-grid-category-listgrid{
 		font-size: 0;
