--- a/wp-content/themes/webx_contractor_single/sass/pages/_menu.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_menu.scss
@@ -1,7 +1,7 @@
 @media only screen {
 	.menu-menu{
 		padding: 20px;
-		background-color: $light-grey;
+		background-color: transparent;
 	}
 	.menu-menu-grid-category{
 		padding-bottom: 40px;
