--- a/wp-content/themes/webx_contractor_single/sass/_global-recent_posts.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global-recent_posts.scss
@@ -41,12 +41,13 @@
 	}
 	.global-recentposts-viewall{
 		text-decoration: none;
-		color: black;
+		color: white;
 		text-transform: uppercase;
 		background-color: $primary;
 		padding: 15px 20px;
 		margin-top: 40px;
 		margin-bottom: 80px;
+		border-radius: 4px;
 		display: inline-block;
 	}
 }
