added new headshot & put the testimonials in a good place

--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -26,6 +26,7 @@
 		.company-employees-grid,
 		.services-services-grid,
 		.menu-menu,
+		.testimonials-testimonials,
 		.global-recentposts-viewall{
 			position: relative;
 			z-index: 2;
