--- a/wp-content/themes/webx_contractor_single/sass/pages/_menu.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_menu.scss
@@ -50,12 +50,12 @@
 		font-family: $body;
 	}
 	.menu-menu-grid-category-grid-item-textcontainer-description{
-		margin: 20px 0;
+		margin-top: 20px;
 		font-size: 1.4rem;
 		line-height: 21px;
 	}
 	.menu-menu-grid-category-grid-item-textcontainer-price{
-		margin-bottom: 20px;
+		margin: 20px 0;
 		font-size: 1.6rem;
 	}
 	.menu-menu-grid-category-listgrid{
