--- a/wp-content/themes/webx_contractor_single/sass/pages/_blog.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_blog.scss
@@ -47,6 +47,7 @@
 	.blog-blog-grid-item-textcontainer-date{
 		font-size: 1.6rem;
 		padding: 10px 0 0 10px;
+		text-align: center;
 	}
 	.blog-blog-grid-item-textcontainer-description{
 		padding: 10px;
@@ -88,8 +89,19 @@
 		left: calc(50% + 20px);
 		@include transform(translateX(-50%));
 	}
+	#blog{
+		.blog-blog-grid{
+			left: 0;
+			margin: 0 auto;
+			@include transform(translateX(0));
+		}
+		.blog-blog-grid-item{
+			margin: 0;
+		}
+	}
 	.blog-blog-grid-item{
-		width: calc(50% - 20px);
+		width: 100%;
+		max-width: none;
 		margin: 10px;
 		display: inline-block;
 		box-sizing: border-box;
@@ -206,7 +218,6 @@
 	}
 	.blog-blog-grid-item-textcontainer-date{
 		padding: 20px 0 10px 0;
-		text-align: center;
 	}
 	.blog-blog-grid-item-textcontainer{
 		width: 100%;
