--- a/wp-content/themes/webx_contractor_single/sass/pages/_testimonials.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_testimonials.scss
@@ -3,26 +3,33 @@
 		margin-top: 20px;
 	}
 	.testimonials-testimonials-grid-item{
-		margin: 40px auto 110px auto;
+		margin: 40px 20px;
 		text-align: left;
 		background-color: $light-grey;
 		padding: 20px;
 		position: relative;
-		max-width: 320px;
+		max-width: 641px;
+		left: calc(50% - 20px);
+		@include transform(translateX(-50%));
 	}
 	.testimonials-testimonials-grid-item-personinfo{
 		padding: 20px 0;
 	}
 	.testimonials-testimonials-grid-item-personinfo-name{
-		font-weight: bold;
+		font-weight: 500;
+		font-size: 1.6rem;
 	}
 	.testimonials-testimonials-grid-item-image{
-		position: absolute;
-		width: 140px;
-	    border-radius: 220px;
-	    right: 0;
-	    bottom: 0;
-	    @include transform(translateY(50%));
+		width: 100%;
+		min-height: 220px;
+		background-size: cover;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		max-width: 641px;
+	}
+	.testimonials-testimonials-grid-item-quote{
+		padding-top: 20px;
+		font-size: 1.6rem;
 	}
 	.testimonials-testimonials-grid-item-youtubecontainer{
 		text-align: center;
@@ -36,9 +43,6 @@
 		    width: 100%;
 		    height: 100%;
 		}
-	}
-	.testimonials-youtubegriditem{
-		margin: 40px auto;
 	}
 }
 
@@ -63,8 +67,33 @@
 		width: 100%;
 		max-width: none;
 		box-sizing: border-box;
+		font-size: 0;
 	}
-	.testimonials-youtubegriditem{
-		margin: 40px auto 110px auto;
+	.testimonials-testimonials-grid-item-image{
+		min-height: 320px;
+	}
+	.hasimage{
+		.testimonials-testimonials-grid-item-image,
+		.testimonials-testimonials-grid-item-textwrap{
+			width: 50%;
+			display: inline-block;
+			vertical-align: middle;
+			box-sizing: border-box;
+		}	
+		.testimonials-testimonials-grid-item-image{
+			padding-right: 10px;
+		}
+		.testimonials-testimonials-grid-item-textwrap{
+			padding-left: 10px;
+		}
 	}
 }
+
+
+
+
+
+
+
+
+
