areas served in a good place

--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -27,7 +27,8 @@
 		.services-services-grid,
 		.menu-menu,
 		.testimonials-testimonials,
-		.global-recentposts-viewall{
+		.global-recentposts-viewall,
+		.areas-served-areas{
 			position: relative;
 			z-index: 2;
 		}
