--- a/wp-content/themes/webx_contractor_single/sass/pages/_contact.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_contact.scss
@@ -4,6 +4,10 @@
 		margin: 0 auto;
 		text-align: left;
 	}
+	.contact-hero{
+		min-height: 320px;
+		overflow: hidden;
+	}
 	.contact-hero-map{
 		width: 100%;
 		height: 100%;
@@ -27,7 +31,7 @@
 	.contact-contact-left-locations-location-name{
 		font-family: $body;
 		font-size: 2rem;
-		font-weight: bold;
+		font-weight: 500;
 	}
 	.contact-contact-left-locations-location-address{
 		margin: 5px 0;
@@ -42,7 +46,7 @@
 	}
 	.contact-contact-left-locations-location-hours-row-daystart,
 	.contact-contact-left-locations-location-hours-row-dayend{
-		font-weight: bold;
+		font-weight: 500;
 	}
 	.contact-contact-right{
 		input,textarea{
@@ -72,10 +76,10 @@
 	.contact-contact-right{
 		vertical-align: top;
 		margin-top: -9px;
-		padding-left: 10px;
+		padding-right: 10px;
 	}
 	.contact-contact-left{
-		padding-right: 10px;
+		padding-left: 10px;
 	}
 	.contact-contact-left-address,
 	.contact-contact-left-call{
