--- a/wp-content/themes/webx_contractor_single/sass/pages/_coupons.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_coupons.scss
@@ -1,4 +1,5 @@
 @media only screen {
+	.coupons-
 	.coupons-coupons-pagination{
 		*{
 			color: black;
@@ -30,7 +31,8 @@
 		text-align: center;
 	}
 	.coupons-coupons-grid-item-textcontainer-sitename{
-		font-size: 3rem;
+		font-size: 1.6rem;
+		font-family: $body;
 	}
 	.coupons-coupons-grid-item-textcontainer-header{
 		margin-top: 15px;
@@ -43,6 +45,9 @@
 	}
 	.coupons-coupons-grid-item-textcontainer-code{
 		font-size: 1.6rem;
+		strong{
+			font-weight: 500;
+		}
 	}
 	.coupons-coupons-pagination{
 		.pagination{
@@ -61,14 +66,14 @@
 		}
 	}
 	.coupons-coupons-grid-item-textcontainer-print{
-		border: 4px solid black;
+		border: 2px solid black;
 		padding: 15px 30px;
 		text-transform: uppercase;
 		text-align: center;
 		display: inline-block;
 		margin: 20px auto 10px auto;
 		font-size: 1.8rem;
-		font-weight: bold;
+		font-weight: 500;
 		text-decoration: none;
 		color: black;
 	}
