updated contact coupons featured posts and footer

--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -47,9 +47,8 @@
 	}
 	.section-header{
 		display: inline-block;
-		border-left: 2px solid $primary;
-		border-right: 2px solid $primary;
-		padding: 0 10px;
+		border-bottom: 2px solid $primary;
+		padding: 10px;
 	}	
 	.hero{
 		background-size: cover;
