--- a/wp-content/themes/webx_contractor_single/sass/pages/_contact.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_contact.scss
@@ -18,6 +18,11 @@
 	.contact-hero-text{
 		z-index: 2;
 	}
+	.contact-contact-left{
+		a{
+			color: black;
+		}
+	}
 	.contact-contact-left-locations-header{
 		font-size: 2.8rem;
 		font-family: $body;
