--- a/wp-content/themes/webx_contractor_single/sass/_gform.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_gform.scss
@@ -34,7 +34,7 @@
 	}
 	.gform_footer{
 		input[type='submit']{
-			color: black;
+			color: white;
 			background-color: $primary;
 			text-transform: uppercase;
 			padding: 10px 20px;
