--- a/wp-content/themes/webx_contractor_single/sass/_global-recent_posts.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global-recent_posts.scss
@@ -20,9 +20,16 @@
 	}
 	.global-recentposts-grid-item-header{
 		text-align: left;
-		padding: 5px 10px;
-		background-color: $primary;
+		padding: 10px;
+		color: black;
 		font-family: 'Montserrat', 'Helvetica', sans-serif;
+		&:after{
+			content: '';
+			border-bottom: 3px solid $primary;
+			width: 20%;
+			display: block;
+			padding: 5px;
+		}
 	}
 	.global-recentposts-grid-item-description{
 		text-align: left;
@@ -34,10 +41,16 @@
 	.global-recentposts-grid-item-link{
 		display: inline-block;
 		text-transform: uppercase;
-		font-weight: 700;
-		margin-left: 10px;
+		font-weight: 500;
+		font-size: 1.2rem;
+		margin-top: 10px;
 		color: black;
 		text-decoration: none;
+		border: 2px solid black;
+		padding: 10px 15px;
+		left: 50%;
+		position: relative;
+		@include transform(translateX(-50%));
 	}
 	.global-recentposts-viewall{
 		text-decoration: none;
