--- a/wp-content/themes/webx_contractor_single/sass/pages/_coupons.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_coupons.scss
@@ -22,13 +22,14 @@
 	}
 	.coupons-coupons-grid-item{
 		padding: 20px;
-		background-color: #f1f1f1;
-		border: 4px dashed black;
+		background-color: $footer-grey;
+		border: 2px solid grey;
 		display: inline-block;
 		width: calc(100% - 40px);
 		max-width: calc(473px - 40px);
 		margin-bottom: 40px;
 		text-align: center;
+		color: white;
 	}
 	.coupons-coupons-grid-item-textcontainer-sitename{
 		font-size: 1.6rem;
@@ -66,7 +67,7 @@
 		}
 	}
 	.coupons-coupons-grid-item-textcontainer-print{
-		border: 2px solid black;
+		border: 2px solid white;
 		padding: 15px 30px;
 		text-transform: uppercase;
 		text-align: center;
@@ -75,7 +76,7 @@
 		font-size: 1.8rem;
 		font-weight: 500;
 		text-decoration: none;
-		color: black;
+		color: white;
 	}
 }
 
