--- a/wp-content/themes/webx_contractor_single/sass/main.scss
+++ b/wp-content/themes/webx_contractor_single/sass/main.scss
@@ -49,6 +49,7 @@ footer, header, hgroup, menu, nav, section, img {
 
 
 @import "global";
+@import "fadeeffects";
 @import "gform";
 @import "pages/404";
 @import "lity";
