--- a/wp-content/themes/webx_contractor_single/sass/partials/_header.scss
+++ b/wp-content/themes/webx_contractor_single/sass/partials/_header.scss
@@ -124,6 +124,7 @@
 		margin-left: 10px;
 		font-weight: normal;
 		text-decoration: none;
+		border-radius: 4px;
 	}
 	.header-tint{
 		background-color: $medium-grey;
