--- a/wp-content/themes/webx_contractor_single/sass/_global-contact.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global-contact.scss
@@ -34,12 +34,13 @@
 	}
 	.global-contact-content-button{
 		text-decoration: none;
-		color: black;
+		color: white;
 		text-transform: uppercase;
 		background-color: $primary;
 		padding: 15px 20px;
 		margin-top: 20px;
 		display: inline-block;
+		border-radius: 4px;
 	}
 }
 
