--- a/wp-content/themes/webx_contractor_single/sass/pages/_blog.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_blog.scss
@@ -7,7 +7,7 @@
 			color: black;
 			font-family: $body;
 			font-size: 2rem;
-			font-weight: bold;
+			font-weight: 500;
 			padding: 0 10px;
 			&.current{
 				font-weight: normal;
