--- a/wp-content/themes/webx_contractor_single/sass/pages/_coupons.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_coupons.scss
@@ -1,11 +1,10 @@
 @media only screen {
-	.coupons-
 	.coupons-coupons-pagination{
 		*{
 			color: black;
 			font-family: $body;
 			font-size: 2rem;
-			font-weight: bold;
+			font-weight: 500;
 			padding: 0 10px;
 			&.current{
 				font-weight: normal;
