updated color pickers

--- a/wp-content/themes/webx_contractor_single/sass/pages/_blog.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_blog.scss
@@ -142,7 +142,7 @@
 		padding: 20px;
 		box-sizing: border-box;
 		margin-left: 20px;
-		background-color: rgba(#e1e1e1, 0.75);
+		background-color: #e1e1e1;
 		margin-top: 20px;
 	}
 	.blog-blog-sidebar-recentposts-header,
