patched bug in slider code where it owhe first one unless the total amount of slides is 4 and web optimized media library images

--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -17,6 +17,9 @@
 		.company-wysiwyg,
 		.hero-text-subheader,
 		.services-services-grid-item-wrapper,
+		.gallery-galleries-gallery-header,
+		.menu-menu-grid-category-header,
+		.menu-menu-grid-category-description,
 		.blog-blog{
 			color: white;
 			position: relative;
