--- a/wp-content/themes/webx_contractor_single/sass/main.scss
+++ b/wp-content/themes/webx_contractor_single/sass/main.scss
@@ -54,6 +54,7 @@ footer, header, hgroup, menu, nav, section, img {
 @import "pages/404";
 @import "lity";
 @import "baguetteBox";
+@import "parallax";
 @import "global-recent_posts";
 @import "global-contact";
 @import "global-popups";
