--- a/wp-content/themes/webx_contractor_single/sass/pages/_areas-served.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_areas-served.scss
@@ -15,6 +15,9 @@
 		z-index: 2;
 		text-align: center;
 	}
+	.areas-served-hero-text-header{
+		color: white !important;
+	}
 	.areas-served-hero-tint{
 		z-index: 1;
 	}
