--- a/wp-content/themes/webx_contractor_single/sass/pages/_contact.scss
+++ b/wp-content/themes/webx_contractor_single/sass/pages/_contact.scss
@@ -18,6 +18,9 @@
 	.contact-hero-text{
 		z-index: 2;
 	}
+	.contact-hero-text-header{
+		color: white !important;
+	}
 	.contact-contact-left{
 		a{
 			color: black;
