--- a/wp-content/themes/webx_contractor_single/sass/_global.scss
+++ b/wp-content/themes/webx_contractor_single/sass/_global.scss
@@ -41,6 +41,23 @@
 			display: block;
 		}
 	}
+	.main{
+		.hero-text-header{
+			&:after{
+				content: '';
+				border-bottom: 4px solid $primary;
+				width: 100%;
+				position: relative;
+				display: block;
+			}
+		}
+		.areas-served-hero-text-header,
+		.contact-hero-text-header{
+			&:after{
+				border-bottom: none;
+			}
+		}
+	}
 	.main-tint{
 		display: none;
 	}
@@ -71,6 +88,7 @@
 	section:not(.home-hero):not(#coupons):not(#blog){
 		&.hero{
 			height: 20vh;
+			overflow: hidden;
 		}
 		.hero-text{
 			left: 50%;
