--- a/wp-content/themes/123_parent/sass/pages/_blog.scss
+++ b/wp-content/themes/123_parent/sass/pages/_blog.scss
@@ -36,8 +36,8 @@
 		text-decoration: none;
 		text-transform: uppercase;
 		color: black;
-		text-align: center;
-		font-weight: normal;
+		text-align: left;
+		font-weight: 900;
 	}
 	.main--hasbg{
 		.blog-blog-grid-item-textcontainer-header{
@@ -45,9 +45,9 @@
 		}
 	}
 	.blog-blog-grid-item-textcontainer-date{
-		font-size: 1.6rem;
+		font-size: 1.4rem;
 		padding: 10px 0 0 10px;
-		text-align: center;
+		text-align: left;
 	}
 	.blog-blog-grid-item-textcontainer-description{
 		padding: 10px;
@@ -67,7 +67,12 @@
 	.blog-blog-grid-item-socialcontainer{
 		padding-left: 10px;
 		margin-bottom: -10px;
-		text-align: center;
+		text-align: left;
+	}
+	.blog-blog-grid-item-socialcontainer-header{
+		font-family: $body;
+		font-size: 1.6rem;
+		font-weight: 500;
 	}
 	.blog-blog-sidebar{
 		display: none;
