increased horizontal padding for the post date on the blog

--- a/wp-content/themes/123_parent/sass/pages/_blog.scss
+++ b/wp-content/themes/123_parent/sass/pages/_blog.scss
@@ -222,7 +222,7 @@
 		margin: 0;
 	}
 	.blog-blog-grid-item-textcontainer-date{
-		padding: 20px 0 10px 0;
+		padding: 20px 10px 10px 10px;
 	}
 	.blog-blog-grid-item-textcontainer{
 		width: 100%;
