--- a/wp-content/themes/123_parent/sass/partials/_header.scss
+++ b/wp-content/themes/123_parent/sass/partials/_header.scss
@@ -65,6 +65,10 @@
 		max-width: 320px;
 		max-height: 50px;
 	}
+	.header-content-logo,
+	.header-content-rightwrap{
+		vertical-align: middle;
+	}
 	.header-content-menus-social-menu{
 		font-size: 0;
 		text-align: right;
@@ -133,7 +137,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 110px;
+		height: 98px;
 		z-index: -1;
 	}
 	.topbar-removed{
