updated the footer bar and t&c page style

--- a/wp-content/themes/123_parent/sass/main.scss
+++ b/wp-content/themes/123_parent/sass/main.scss
@@ -91,3 +91,5 @@ footer, header, hgroup, menu, nav, section, img {
 @import "pages/menu";
 
 @import "pages/disabled";
+
+@import "pages/terms-and-conditions";
