changed Author URI in style.css

--- a/wp-content/themes/123_parent/style.css
+++ b/wp-content/themes/123_parent/style.css
@@ -2,7 +2,7 @@
 Theme Name: 123 - Parent
 Theme URI: 
 Author: Zach Rubin-Rattet
-Author URI: http://zrrdigitalmedia.com/
+Author URI: http://webxmarketing.com/
 Description: 123 Website's Parent
 Version: 1.0
 License: GNU General Public License v2 or later
