payment image selections seem to be in a good place

--- a/wp-content/themes/123_parent/sass/partials/_footer.scss
+++ b/wp-content/themes/123_parent/sass/partials/_footer.scss
@@ -200,6 +200,14 @@
 		&.paypal{
 			background-position: 100% 0;
 		}
+		&.hasimage{
+			background-image: none;
+		}
+	}
+	.footer-middlecolumn2-payment-type-image{
+		display: inline-block;
+		height: 100%;
+		width: auto;
 	}
 	.footer-rightcolumn{
 		text-align: left;
