--- a/wp-content/themes/123_parent/sass/pages/_contact.scss
+++ b/wp-content/themes/123_parent/sass/pages/_contact.scss
@@ -28,13 +28,13 @@
 	}
 	.contact-contact-left-locations-header{
 		font-size: 3.2rem;
-		font-family: $header;
+		font-family: $body;
 		text-align: center;
-		margin-bottom: 20px;
+		margin: 20px 0;
 		&:after{
 			content: '';
 			display: block;
-			width: 60px;
+			width: 100%;
 			border-bottom: 2px solid $primary;
 			left: 50%;
 			@include transform(translateX(-50%));
@@ -69,6 +69,20 @@
 	.contact-contact-right{
 		input,textarea{
 			font-family: $body;
+		}
+	}
+	a.contact-contact-left-locations-location-getdirections{
+		background-color: #9f9f9f;
+		color: white;
+		padding: 10px;
+		font-size: 1.8rem;
+		display: inline-block;
+		width: auto;
+		text-decoration: none;
+		margin-bottom: 10px;
+		&:before{
+			content:'';
+			display: block;
 		}
 	}
 }
@@ -110,5 +124,8 @@
 	.contact-contact-left-call-header{
 		font-size: 2.4rem;
 		margin: 20px 0 10px 0;
+	}
+	.contact-contact-left-locations-header{
+		margin-top: 0px;
 	}
 }
