--- a/wp-content/themes/123_parent/sass/pages/_contact.scss
+++ b/wp-content/themes/123_parent/sass/pages/_contact.scss
@@ -31,6 +31,7 @@
 		font-family: $body;
 		text-align: center;
 		margin: 20px 0;
+		font-weight: 600;
 		&:after{
 			content: '';
 			display: block;
