--- a/wp-content/themes/123_parent/sass/partials/_mobileheader.scss
+++ b/wp-content/themes/123_parent/sass/partials/_mobileheader.scss
@@ -55,6 +55,7 @@
 		width: auto;
 		max-height: 28px;
 		display: inline-block;
+		max-width: 240px;
 	}
 	.mobileheader-menus{
 		text-align: center;
