--- a/wp-content/themes/123_parent/sass/partials/_mobilefooter.scss
+++ b/wp-content/themes/123_parent/sass/partials/_mobilefooter.scss
@@ -88,6 +88,9 @@
 		display: inline-block;
 		margin: 20px auto 0 auto;
 	}
+	.mobilefooter-webxlink-logo{
+		max-width: 100%;
+	}
 	.mobilefooter-copyright-tclink{
 		color: white;
 	}
