updated style.css to reflect different credits

--- a/wp-content/themes/123_parent/style.css
+++ b/wp-content/themes/123_parent/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: 123 - Parent
 Theme URI: 
-Author: Zach Rubin-Rattet
-Author URI: http://webxmarketing.com/
-Description: 123 Website's Parent
+Author: 123 - Parent
+Author URI: http://123websites.com/
+Description: 123 Website's Parent Theme - This works on it's own as a beautiful (mostly) single page website.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
