updated mobilefooter to remove second powered by and added payment types

--- a/wp-content/themes/123_parent/sass/partials/_mobilefooter.scss
+++ b/wp-content/themes/123_parent/sass/partials/_mobilefooter.scss
@@ -84,6 +84,9 @@
 		display: inline-block;
 		font-size: 1.8rem;
 	}
+	.mobilefooter-payment{
+		padding-top: 20px;
+	}
 	.mobilefooter-webxlink{
 		display: inline-block;
 		margin: 20px auto 0 auto;
