--- a/wp-content/themes/123_parent/sass/partials/_footer.scss
+++ b/wp-content/themes/123_parent/sass/partials/_footer.scss
@@ -8,6 +8,44 @@
 	.footer-copyright{
 		display: none;
 	}
+	.footer-middlecolumn2-payment-type{
+		height: 30px;
+		background-image: url('../../library/img/payment-types.jpg');
+		background-repeat: no-repeat;
+		margin: 5px;
+		width: 47.3px;
+	    display: inline-block;
+		background-position: 0 0;
+	    &.mastercard{
+	    	background-position: 0% 0;
+	    }
+		&.visa{
+			background-position: calc(100% / 6) 0;
+		}
+		&.amex{
+			background-position: calc(calc(2 / 6) * 100%) 0;
+		}
+		&.discover{
+			background-position: 50% 0;
+		}
+		&.paypal{
+			background-position: calc(calc(4 / 6) * 100%) 0;
+		}
+		&.cash{
+			background-position: calc(calc(5 / 6) * 100%) 0;
+		}
+		&.check{
+			background-position: 100% 0;
+		}
+		&.hasimage{
+			background-image: none;
+		}
+	}
+	.footer-middlecolumn2-payment-type-image{
+		display: inline-block;
+		height: 100%;
+		width: auto;
+	}
 }	
 
 @media only screen and (min-width: $medium){
@@ -177,43 +215,8 @@
 	    }
 	}
 	.footer-middlecolumn2-payment-type{
-		height: 30px;
-		background-image: url('../../library/img/payment-types.jpg');
-		background-repeat: no-repeat;
-		margin: 5px 0;
-		width: 47.3px;
-	    margin-right: 20px;
-	    display: inline-block;
-		background-position: 0 0;
-	    &.mastercard{
-	    	background-position: 0% 0;
-	    }
-		&.visa{
-			background-position: calc(100% / 6) 0;
-		}
-		&.amex{
-			background-position: calc(calc(2 / 6) * 100%) 0;
-		}
-		&.discover{
-			background-position: 50% 0;
-		}
-		&.paypal{
-			background-position: calc(calc(4 / 6) * 100%) 0;
-		}
-		&.cash{
-			background-position: calc(calc(5 / 6) * 100%) 0;
-		}
-		&.check{
-			background-position: 100% 0;
-		}
-		&.hasimage{
-			background-image: none;
-		}
-	}
-	.footer-middlecolumn2-payment-type-image{
-		display: inline-block;
-		height: 100%;
-		width: auto;
+		margin-right: 20px;
+		margin-left: 0px;
 	}
 	.footer-rightcolumn{
 		text-align: left;
