updated footer style

--- a/wp-content/themes/123_parent/sass/partials/_footer.scss
+++ b/wp-content/themes/123_parent/sass/partials/_footer.scss
@@ -136,6 +136,8 @@
 	}
 	.footer-webxlink-logo{
 		display: inline-block;
+	    height: 65px;
+	    margin: 10px 0px 0px 0px;
 	}
 	.footer-pagelinks{
 		width: 60%;
