--- a/wp-content/themes/123_parent/sass/_global-contact.scss
+++ b/wp-content/themes/123_parent/sass/_global-contact.scss
@@ -30,7 +30,8 @@
 	.global-contact-content-header{
 		color: white;
 		text-transform: uppercase;
-		font-size: 3.6rem;
+		font-size: 3.2rem;
+		font-family: "Gotham", "Impact", sans-serif;
 	}
 	.global-contact-content-button{
 		text-decoration: none;
