--- a/wp-content/themes/123_parent/sass/_global.scss
+++ b/wp-content/themes/123_parent/sass/_global.scss
@@ -68,7 +68,7 @@
 	.section-header{
 		display: inline-block;
 		border-bottom: 2px solid $primary;
-		padding: 10px;
+		padding: 10px 0;
 	}	
 	.hero{
 		background-size: cover;
