--- a/wp-content/themes/123_parent/sass/pages/_testimonials.scss
+++ b/wp-content/themes/123_parent/sass/pages/_testimonials.scss
@@ -30,6 +30,8 @@
 	.testimonials-testimonials-grid-item-quote{
 		padding-top: 20px;
 		font-size: 1.6rem;
+		line-height: 175%;
+		text-align: justify;
 	}
 	.testimonials-testimonials-grid-item-youtubecontainer{
 		text-align: center;
@@ -81,7 +83,8 @@
 			box-sizing: border-box;
 		}	
 		.testimonials-testimonials-grid-item-image{
-			padding-right: 10px;
+			background-size: calc(100% - 10px) auto;
+			background-position-x: 0px;
 		}
 		.testimonials-testimonials-grid-item-textwrap{
 			padding-left: 10px;
