--- a/wp-content/themes/123_parent/sass/pages/_disabled.scss
+++ b/wp-content/themes/123_parent/sass/pages/_disabled.scss
@@ -5,6 +5,8 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center center;
+		position: relative;
+		overflow: hidden;
 	}
 	.disabled-tint{
 		background-color: rgba(0,0,0,0.3);
